# shidou

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
src/: cli.rs  config.rs  lib.rs  runner.rs  runtime.rs  tracing_init.rs
