[package]
name = "shidou"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Shidou (始動) — app bootstrap: tracing init, CLI dispatch, config loading"
homepage = "https://github.com/pleme-io/shidou"
repository = "https://github.com/pleme-io/shidou"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["bootstrap", "init", "tracing", "config", "cli"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
shikumi = { git = "https://github.com/pleme-io/shikumi" }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
